--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </section>
     <section id="club-ethos">	
-        <h1>Why Love Running With Us?</h1>	
+        <h2 id="welcome">Why Love Running With Us?</h2>	
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>Feel Healthy</h2>
@@ -62,7 +62,7 @@
                 <hr>
                 <p>
                     When we run with others, we can run farther and faster more easily. 
-                    Social running can pull you out of a running funk or low mood, inspire you to try new events
+                    Social running can pull you out of a running funk or low mood, inspire you to try new events.
                 </p>
             </div>
             <div class="right-about-heading">
@@ -73,7 +73,11 @@
                 </p>
             </div>
         </div>	
-        <div id="center-about">Center</div>	
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>	
     </section>
     <section>
         Running locations, distances.
