--- a/index.html
+++ b/index.html
@@ -117,7 +117,24 @@
         </div>
     </section>
 <footer>
-    Social Media Links
+    <ul>
+        <li>
+            <a href="https://facebook.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Facebook Page (opens in a new tab)."><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li>
+            <a href="https://twitter.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Twitter Page (opens in a new tab)."><i class="fa-brands fa-twitter"></i></a>
+        </li>
+        <li>
+            <a href="https://youtube.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Youtube Page (opens in a new tab)."><i class="fa-brands fa-youtube"></i></a>
+        </li>
+        <li>
+            <a href="https://instagram.com" target="_blank" rel="noopener" 
+            aria-label="Visit our Instagram Page (opens in a new tab)."><i class="fa-brands fa-instagram"></i></a>
+        </li>
+    </ul>
 </footer>
 
 <!--font awesome script-->
